--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="linha">
+    <div class="container linha">
         <div class="item"></div>
     </div>
-    <div class="coluna">
+    <div class="container coluna">
         <div class="item"></div>
     </div>
 </body>
